<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_remove">Remove</string><string name="add_manager">Manager privileges?</string><string name="app_name">Dog Daycare</string>
    <string name="entry_sales">Sales</string>
    <string name="entry_daycare">Daycare</string>
    <string name="entry_admin_setting">Manager settings</string>
    <string name="entry_register">Register Owner</string><string name="entry_newAppointment">New Appointment</string><string name="entry_newCustomer">New Customer</string><string name="entry_newAnimal">New Animal</string><string name="pin_ask">Please enter your 4 digit PIN</string>
    <string name="pin_enter">Enter</string>
    <string name="dbtools_employees">Employees</string>
    <string name="dbtools_title"></string>
    <string name="dbtools_first">First Name</string>
    <string name="dbtools_last">Last Name</string>
    <string name="dbtools_phone">Phone</string>
    <string name="dbtools_email">Email</string>
    <string name="dbtools_password">Password</string>
    <string name="dbtools_address">Home Address</string>
    <string name="dbtools_save">Save</string>
    <string name="dbtools_add">Add</string>
    <string name="dbtools_ID">ID : </string>
    
<<<<<<< HEAD
    <string name="dbtools_animal_name">Pet Name</string><string name="dbtools_animal_owner">Owner Name</string><string name="dbtools_animal_rabies">Rabies</string><string name="dbtools_animal_cdv">Distemper (CDV)</string><string name="dbtools_animal_cpv2">Parvovirus  (CPV2)</string><string name="dbtools_animal_cav2">Adenovirus / Canine Hepatitis (CAV-2)</string><string name="dbtools_animal_cpiv">Parainfluenza (CPiV)</string><string name="dbtools_animal_bb">Bordetella (Bb)</string><string name="dbtools_animal_lyme">Lyme Disease Vaccine</string><string name="dbtools_animal_vdates">Vaccination Dates</string><string name="dbtools_animal_vpass">Current</string><string name="dbtools_animal_ownerID">0000</string><string name="single_emp_update">Update</string>
=======
    <string name="dbtools_animal_name">Pet Name</string><string name="dbtools_animal_owner">Owner Name</string><string name="dbtools_animal_rabies">Rabies Vaccine</string><string name="dbtools_animal_dhlpp">Canine Distemper Vaccine  (DHLPP)</string><string name="dbtools_animal_cpv2">Parvovirus  (CPV2)</string><string name="dbtools_animal_cav2">Canine Hepatitis / Adenovirus Vaccine (CAV-2)</string><string name="dbtools_animal_cpiv">Parainfluenza Vaccine (CPiV)</string><string name="dbtools_animal_bb">Bordetella Vaccine (Bb)</string><string name="dbtools_animal_lyme">Lyme Disease Vaccine</string><string name="dbtools_animal_vdates">Vaccination Dates</string><string name="dbtools_animal_vpass">Current</string><string name="single_emp_update">Update</string>
>>>>>>> origin/master
    
    
    
    
    
    <string name="entry_viewCustomers">Customers</string>
    <string name="entry_viewAnimals">Animals</string>
    <string name="entry_viewAppointment">Appointments</string>
<<<<<<< HEAD
    <string name="dbtools_animal">Registered Animals</string>
    
=======
>>>>>>> origin/master
    
    
    
    
    
    
    
    
    
    
    

</resources>
