<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/entry_newCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_newCustomer" />

    <Button
        android:id="@+id/entry_newAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/entry_newCustomer"
        android:layout_below="@+id/entry_newCustomer"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_newAppointment" />

    <Button
        android:id="@+id/entry_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_admin_setting" />

    <Button
        android:id="@+id/entry_viewCustomers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entry_viewAppointments"
        android:layout_alignParentRight="true"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_viewCustomers" />

    <Button
        android:id="@+id/entry_viewAppointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/entry_newAppointment"
        android:layout_alignLeft="@+id/entry_viewAnimals"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/entry_newAppointment"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_viewAppointment" />

    <Button
        android:id="@+id/entry_viewAnimals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/entry_viewAppointments"
        android:minHeight="80dp"
        android:minWidth="156dp"
        android:text="@string/entry_viewAnimals" />

</RelativeLayout>